force-app/main/default/objects/Voided_Payment_Receipt__c/Voided_Payment_Receipt__c.object-meta.xml
<CustomObject>
    <label>Voided Payment Receipt</label>
    <nameField>
        <displayFormat>VPR-{00000000}</displayFormat>
        <label>Voided Payment Receipt No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voided Payment Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>