force-app/main/default/objects/Voided_Payment_Receipt__c/fields/Credit_Debit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Debit_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit/Debit Note</label>
    <referenceTo>Credit_Note__c</referenceTo>
    <relationshipLabel>Voided Payment Receipts</relationshipLabel>
    <relationshipName>Voided_Payment_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>