force-app/main/default/objects/Voided_Payment_Receipt__c/fields/Payment_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Payment_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Receipt</label>
    <referenceTo>Payment_Receipt__c</referenceTo>
    <relationshipLabel>Voided Payment Receipts</relationshipLabel>
    <relationshipName>Voided_Payment_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>