force-app/main/default/objects/Voided_Payment_Receipt__c/fields/Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agreement</label>
    <referenceTo>Sales_Agreement__c</referenceTo>
    <relationshipLabel>Voided Payment Receipts</relationshipLabel>
    <relationshipName>Voided_Payment_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>