force-app/main/default/objects/Voided_Payment_Receipt__c/fields/Void_Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Void_Payment_Mode__c</fullName>
    <label>Void Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Mode</valueSetName>
    </valueSet>
</CustomField>