force-app/main/default/objects/Voided_Payment_Receipt__c/fields/Void_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Void_Payment_Type__c</fullName>
    <label>Void Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle Deposit</fullName>
            </value>
            <value>
                <fullName>COE Deposit</fullName>
            </value>
            <value>
                <fullName>Balance Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>