force-app/main/default/objects/Voided_Payment_Receipt__c/fields/Void_Receipt_Amount__c.field-meta.xml
<CustomField>
    <fullName>Void_Receipt_Amount__c</fullName>
    <label>Void Receipt Amount</label>
    <summarizedField>Voided_Payment_Receipt_Line_Item__c.Void_Amount__c</summarizedField>
    <summaryForeignKey>Voided_Payment_Receipt_Line_Item__c.Voided_Payment_Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>