force-app/main/default/objects/Voided_Payment_Receipt__c/validationRules/Payment_and_Receipt_Amt_must_be_the_same.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_and_Receipt_Amt_must_be_the_same</fullName>
    <active>true</active>
    <errorConditionFormula>Payment_Amount__c  &lt;&gt;  Payment_Receipt__r.Receipt_Amount__c</errorConditionFormula>
    <errorDisplayField>Payment_Amount__c</errorDisplayField>
    <errorMessage>Payment Amount must be the same as Receipt Amount on Payment Receipt.</errorMessage>
</ValidationRule>